--- a/todo.txt
+++ b/todo.txt
@@ -3,36 +3,36 @@
 
 api:
 1) написать методы для групп
- - получить данные с сервера 
- - добавить данные на сервер
+ - получить данные с сервера d
+ - добавить данные на сервер d
  - обновить данные на сервере
- - удалить данные на сервера
+ - удалить данные на сервера d
  
 2) написать методы для дисциплин
- - получить данные с сервера 
- - добавить данные на сервер
+ - получить данные с сервера d
+ - добавить данные на сервер d
  - обновить данные на сервере
- - удалить данные на сервера
+ - удалить данные на сервера d
  
 3) написать методы для преподов
- - получить данные с сервера 
- - добавить данные на сервер
- - обновить данные на сервере
- - удалить данные на сервера
+ - получить данные с сервера d
+ - добавить данные на сервер d
+ - обновить данные на сервере  d
+ - удалить данные на сервера d
  
 4) написать методы для студентов
- - получить данные с сервера 
- - добавить данные на сервер
- - обновить данные на сервере
- - удалить данные на сервера
+ - получить данные с сервера d
+ - добавить данные на сервер d
+ - обновить данные на сервере d
+ - удалить данные на сервера d
  
 5) написать методы для логинов
- - добавить данные на сервер
+ - добавить данные на сервер 
  - обновить данные на сервере
  - удалить данные на сервера
  
 6) написать методы для расписаний
- - получить данные с сервера 
- - добавить данные на сервер
+ - получить данные с сервера d
+ - добавить данные на сервер d
  - обновить данные на сервере
- - удалить данные на сервера
+ - удалить данные на сервера d
