--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,13 @@ api:
 1) написать методы для групп
  - получить данные с сервера d
  - добавить данные на сервер d
- - обновить данные на сервере
+ - обновить данные на сервере n
  - удалить данные на сервера d
  
 2) написать методы для дисциплин
  - получить данные с сервера d
  - добавить данные на сервер d
- - обновить данные на сервере
+ - обновить данные на сервере n
  - удалить данные на сервера d
  
 3) написать методы для преподов
@@ -27,12 +27,20 @@ api:
  - удалить данные на сервера d
  
 5) написать методы для логинов
- - добавить данные на сервер 
- - обновить данные на сервере
- - удалить данные на сервера
+ - добавить данные на сервер d
+ - обновить данные на сервере d
+ - удалить данные на сервера d
  
 6) написать методы для расписаний
  - получить данные с сервера d
  - добавить данные на сервер d
- - обновить данные на сервере
+ - обновить данные на сервере d	
  - удалить данные на сервера d
+
+7) лабы 
+ - получить данные с сервера d
+ - добавить данные на сервер d
+ - обновить данные на сервереd
+ - удалить данные на сервера d
+ - по группе d
+ - по студенту d
